2002-06-21  Joe English  <jenglish@users.sourceforge.net>

	* generic/tclCompExpr.c:
	* generic/tclParseExpr.c: LogSyntaxError() should reset 
	the interpreter result [Bug 550142 "Tcl_ExprObj -> abort"] 


2002-06-21  Don Porter  <dgp@users.sourceforge.net>

	* library/init.tcl:  Corrected comments and namespace style
        issues.  Thanks to Bruce Stephens. [Bug 572025]

2002-06-21  Vince Darley  <vincentdarley@users.sourceforge.net>

	* tests/cmdAH.test:          Added TIP#99 implementation
	* tests/fCmd.test:           of 'file link'.  Supports creation
	* tests/fileName.test:       of symbolic and hard links in the
	* tests/fileSystem.test:     native filesystems and in vfs's,
	* generic/tclTest.c:         when the individual filesystem
	* generic/tclCmdAH.c:        supports the concept.
	* generic/tclIOUtil.c:       
	* generic/tcl.h:
	* generic/tcl.decls:
	* doc/FileSystem.3:
	* doc/file.n:
	* mac/tclMacFile.c:
	* unix/tclUnixFile.c:
	* win/tclWinFile.c: Also enhanced speed of 'file normalize' on
	Windows.

2002-06-20  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclBasic.c (TclEvalObjvInternal): fix for [Bug 571385]
	in the implementation of TIP#62 (command tracing). Vince Darley,
	Hemang Lavana & Don Porter: thanks.

2002-06-20  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TclCompEvalObj): clarified and simplified
	the logic for compilation/recompilation.

2002-06-19  Joe English  <jenglish@users.sourceforge.net>
	* doc/file.n: Fixed indentation.  No substantive changes.

2002-06-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCmdMZ.c (Tcl_RegexpObjCmd): get the resultPtr again
	as the Tcl_ObjSetVar2 may cause the result to change.
	[Patch #558324] (watson)

2002-06-19  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TEBC): removing unused "for(;;)" loop;
	improved comments; re-indentation.

2002-06-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TEBC): 